# haybale

./: .gitignore  Cargo.toml  README.md  aliases.js  build.rs  index.html  refresh-docs.sh  rustfmt.toml  search-index.js  settings.html  source-files.js
c_examples/: Makefile
c_examples/basic/: basic.bc  basic.c  basic.ll
c_examples/loop/: loop.bc  loop.c  loop.ll
c_examples/memory/: memory.bc  memory.c  memory.ll
c_examples/struct/: struct.bc  struct.c  struct.ll
haybale/: all.html  enum.BBInstrIndex.html  enum.Concretize.html  enum.Demangling.html  enum.Error.html  enum.ParameterVal.html  enum.ReturnValue.html  enum.SolutionValue.html  fn.find_zero_of_func.html  fn.get_path_length.html  fn.get_possible_return_values_of_func.html  fn.pretty_bb_name.html  fn.pretty_var_name.html  fn.symex_function.html  index.html  sidebar-items.js  struct.Config.html  struct.ExecutionManager.html  struct.FunctionHooks.html  struct.Location.html  struct.LocationDescription.html  struct.PathEntry.html  struct.Project.html  struct.State.html  type.Result.html
haybale/alloc_utils/: fn.calloc.html  fn.malloc.html  fn.realloc.html  fn.zalloc.html  index.html  sidebar-items.js
haybale/backend/: index.html  sidebar-items.js  struct.BtorBackend.html  struct.CellMemoryBackend.html  struct.DefaultBackend.html  struct.SimpleMemoryBackend.html  trait.BV.html  trait.Backend.html  trait.Memory.html  trait.SolverRef.html
haybale/callbacks/: index.html  sidebar-items.js  struct.Callbacks.html
haybale/cell_memory/: index.html  sidebar-items.js  struct.Memory.html
haybale/config/: enum.Concretize.html  enum.Demangling.html  enum.NullPointerChecking.html  index.html  sidebar-items.js  struct.Config.html  struct.FunctionHooks.html
haybale/demangling/: enum.Demangling.html
haybale/error/: enum.Error.html  type.Result.html
haybale/function_hooks/: fn.abort_hook.html  fn.generic_stub_hook.html  index.html  sidebar-items.js  struct.FunctionHooks.html  trait.IsCall.html  type.Argument.html
haybale/hook_utils/: fn.memcpy.html  fn.memcpy_bv.html  fn.memset.html  fn.memset_bv.html  index.html  sidebar-items.js
haybale/layout/: constant.POINTER_SIZE_BITS.html  fn.fp_size.html  fn.get_offset_bv_index.html  fn.get_offset_constant_index.html  fn.size.html  fn.size_opaque_aware.html  index.html  sidebar-items.js
haybale/memory/: index.html  struct.Memory.html
haybale/parameter_val/: enum.ParameterVal.html
haybale/project/: struct.Project.html
haybale/return_value/: enum.ReturnValue.html
haybale/simple_memory/: index.html  struct.Memory.html
haybale/solver_utils/: enum.PossibleSolutions.html  enum.SolutionCount.html  fn.bvs_can_be_equal.html  fn.bvs_must_be_equal.html  fn.get_possible_solutions_for_bv.html  fn.max_possible_solution_for_bv.html  fn.max_possible_solution_for_bv_as_binary_str.html  fn.max_possible_solution_for_bv_as_u64.html  fn.min_possible_solution_for_bv.html  fn.min_possible_solution_for_bv_as_binary_str.html  fn.min_possible_solution_for_bv_as_u64.html  fn.sat.html  fn.sat_with_extra_constraints.html  index.html  sidebar-items.js
haybale/state/: enum.BBInstrIndex.html  fn.get_path_length.html  fn.pretty_bb_name.html  fn.pretty_var_name.html  struct.Location.html  struct.LocationDescription.html  struct.PathEntry.html  struct.State.html
haybale/symex/: fn.symex_function.html  struct.ExecutionManager.html
haybale/watchpoints/: index.html  sidebar-items.js  struct.Watchpoint.html  struct.Watchpoints.html
main/: index.html
src/: alloc.rs  alloc_utils.rs  backend.rs  callbacks.rs  cell_memory.rs  config.rs  default_hooks.rs  demangling.rs  double_keyed_map.rs  error.rs  extend.rs  function_hooks.rs  global_allocations.rs  hook_utils.rs  hooks.rs  intrinsic_hooks.rs  iterators.rs  layout.rs  lib.rs  main.rs  memory.rs  parameter_val.rs  possible_solutions.rs  project.rs  return_value.rs  sat.rs  simple_memory.rs  size.rs  solver.rs  solver_utils.rs  state.rs  symex.rs  test_utils.rs  utils.rs  varmap.rs  watchpoints.rs
src/haybale/: alloc.rs.html  alloc_utils.rs.html  (+25 more)
tests/: basic_tests.rs  call_tests.rs  debug_info.rs  functionptr_tests.rs  global_tests.rs  hook_tests.rs  linkedlist_tests.rs  loop_tests.rs  may_abort_tests.rs  memory_tests.rs  path_tests.rs  rmw_tests.rs  simd_tests.rs  struct_tests.rs  throwcatch_tests.rs
(+106 files in other folders)
