[package]
name = "haybale"
version = "0.5.1"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Symbolic execution of LLVM IR, written in Rust"
documentation = "https://docs.rs/haybale"
repository = "https://github.com/PLSysSec/haybale"
readme = "README.md"
keywords = ["symbolic", "llvm", "IR", "SMT"]
license = "MIT"

[dependencies]
llvm-ir = { version = "0.7.1", features = ["llvm-10"] }
boolector = "0.4.1"
either = "1.5.3"
itertools = "0.9.0"
reduce = "0.1"
cpp_demangle = "0.2"
rustc-demangle = "0.1"
log = "0.4.8"

[dev-dependencies]
env_logger = "0.7.1"
